# HaarWaveletTransform-CUDA

./: CMakeLists.txt  HWIC.cpp  HWIC.h  README.md  opencv.sh
img/: compressedImage.tif  image1.tif  image3.tif
src/: HWCuda.cu  HWCuda.h
